package com.designpatterns.java.structural.flyweight;

public enum BrushSize {
  THIN, MEDIUM, THICK
}
