package com.designpatterns.java.structural.flyweight;

public interface Pen
{
  public void setColor(String color);
  public void draw(String content);
}
