@startuml

title __FLYWEIGHT's Class Diagram__\n

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        enum BrushSize {
          MEDIUM
          THICK
          THIN
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        class com.designpatterns.java.structural.flyweight.MediumPen {
            - color : String
            + draw()
            + setColor()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        class com.designpatterns.java.structural.flyweight.PaintBrushClient {
            {static} + main()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        interface com.designpatterns.java.structural.flyweight.Pen {
            {abstract} + draw()
            {abstract} + setColor()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        class com.designpatterns.java.structural.flyweight.PenFactory {
            {static} - pensMap : HashMap<String, Pen>
            {static} + getMediumPen()
            {static} + getThickPen()
            {static} + getThinPen()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        class com.designpatterns.java.structural.flyweight.ThickPen {
            - color : String
            + draw()
            + setColor()
        }
      }
    }
  }
  

  namespace  {
    namespace om.designpatterns.java {
      namespace structural.flyweight {
        class com.designpatterns.java.structural.flyweight.ThinPen {
            - color : String
            + draw()
            + setColor()
        }
      }
    }
  }
  

  com.designpatterns.java.structural.flyweight.MediumPen .up.|> com.designpatterns.java.structural.flyweight.Pen
  com.designpatterns.java.structural.flyweight.MediumPen o-- com.designpatterns.java.structural.flyweight.BrushSize : brushSize
  com.designpatterns.java.structural.flyweight.ThickPen .up.|> com.designpatterns.java.structural.flyweight.Pen
  com.designpatterns.java.structural.flyweight.ThickPen o-- com.designpatterns.java.structural.flyweight.BrushSize : brushSize
  com.designpatterns.java.structural.flyweight.ThinPen .up.|> com.designpatterns.java.structural.flyweight.Pen
  com.designpatterns.java.structural.flyweight.ThinPen o-- com.designpatterns.java.structural.flyweight.BrushSize : brushSize


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
